--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "start": "node apps/api/dist/src/main"
+    "start": "node apps/api/dist/main"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "turbo": "^1.9.3"
+    "turbo": "^1.9.1"
   },
   "workspaces": [
     "apps/*"
